# mlops-cybersec-e2e

./: .gitignore  PROJECT_STRUCTURE.txt  README.md  etl_network_data.py  pyproject.toml  setup_project_skeleton.py  test_mongodb_connection.py
src/networksecurity/: main.py
src/networksecurity/constant/training_pipeline/: __init__.py
src/networksecurity/utils/: exception.py  logger.py
